# Chat-with-CSV

./: README.md  app.py  code_to_execute.py  prompts.py  readme.md  requirements.txt  streamlit.py
utils/data/: langchain-0.0.252-py3-none-any.whl  main.py  pyproject.toml  utils.py
utils/text/: chat.py  ok.md  prompts.py
